resource refactor test cli and live cli